--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+#added to solve error (java.lang.OutOfMemoryError (no error message))
+org.gradle.jvmargs=-Xmx4608m
+
